Began updating index projects

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Joseph Mills Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,10 +27,11 @@
 						</ul>
 					</div>
 
-				<!-- Header -->
+				<!-- Header 
 					<header id="header">
 						<a href="index.html" class="logo">Massively</a>
 					</header>
+				-->
 
 				<!-- Nav -->
 					<nav id="nav">
@@ -48,15 +50,17 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<h2><a href="#">Warlords of the Wastes</h2>
+									<p>A real time strategy game where you control a warband of cars<br />
+									which travels across the wastes destroying enemy factions using the<br />
+									rams and turrets fitted to the vehicle. The cars chaotically navigate using a <br />
+									<a href=# >"boids" </a> algorithm to give the convoy a sense of controlled chaos. <br />
+									Completed as a personal project.
+									</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/wotw1.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="#" class="button large">Itch.io page</a></li>
 								</ul>
 							</article>
 
@@ -64,33 +68,38 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="https://gitlab.com/uobrassmonkey/game">Watson</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://gitlab.com/uobrassmonkey/game" class="image fit"><img src="images/watson.jpg" alt="" /></a>
+									<p>A murder mystery game where you play as watson, a detective.<br />
+									You must speak to the guests, which make use of Natural Language processing </br> 
+									allowing them to understand a wide variety of qestions, to gather information </br>
+									and solve the case! Completed as part of the University of Bristol "Games Projet" </br>
+									module as part of a team of 7.
+									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://gitlab.com/uobrassmonkey/game" class="button">GitLab Repository</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="https://electrically-challenged.itch.io/quantum-hellbullet">Quantum Hellbullet</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://electrically-challenged.itch.io/quantum-hellbullet" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<p>Quantum Hellbullet is an out of control twist on the classic bullet hell genre. 
+									Play as the Quantum Hellbullet, a ship with no offensive or movement capabilities 
+									which instead of weaving between projectiles you instead use the ships Quantum 
+									spacetime manipulation tools to move the projectiles around you. See how long you 
+									can survive. <br />
+									Created by a team of 4 in 48 hours part of the 2020 GMTK "out of control" GameJam</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://electrically-challenged.itch.io/quantum-hellbullet" class="button">Itch.io page</a></li>
 									</ul>
 								</article>
+								<!--
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="#">Animation</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -134,6 +143,7 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
+								-->
 							</section>
 
 						<!-- Footer -->
