--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>My portfolio</h1>
-						<p>Showcase of my projects and my abilities</p>
+						<h1>Hi, my name is Joseph Mills</h1>
+						<p>I'm a Computer Science Graduate (graduated 2020) and I have a passion for games development and animation.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
-				<!-- Header 
+				<!-- Header
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Joseph Mills</a>
 					</header>
 				-->
 
@@ -50,31 +50,95 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Warlords of the Wastes</h2>
-									<p>A real time strategy game where you control a warband of cars<br />
-									which travels across the wastes destroying enemy factions using the<br />
-									rams and turrets fitted to the vehicle. The cars chaotically navigate using a <br />
-									<a href=# >"boids" </a> algorithm to give the convoy a sense of controlled chaos. <br />
-									Completed as a personal project.
-									</p>
+									<h2>Background</h2>
 								</header>
+								<p>
+									Technical: I graduated from the <a href=https://www.bristol.ac.uk/>University of Bristol</a> with First-Class Honours in MEng Computer Science.
+								</p>
+								<p>
+									Work experience: Internship, Games project, other stuff?
+								</p>
+								<p>
+									When I'm not working on game related projects, I enjoy 3D
+									printing and playing music, having played trombone in a of
+									ensambles. I also play Piano, Guitar and Drums casually.
+									Additionally, I enjoy playing video games, board games and
+									tabletop games as well as being creative with 3D modelling
+									and 3D printing.
+								</p>
 								<a href="#" class="image main"><img src="images/wotw1.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Itch.io page</a></li>
+									<li><a href="#" class="button large">Itch.io page</a></li>
 								</ul>
+							</article>
+
+							<article class="post featured">
+								<header class="minor">
+									<h2><a href="#">Skills</a></h2>
+								</header>
+								<table>
+									<tr>
+										<th>Languages</th>
+										<th>Software</th>
+										<th>Misc</th>
+									</tr>
+									<tr>
+										<td>C</td>
+										<td>Unity 3D</td>
+										<td>Japanese (Conversational, limited professional proficiency)</td>
+									</tr>
+								<tr>
+									<td>C++</td>
+									<td>Autodesk Maya</td>
+								</tr>
+								<tr>
+									<td>C#</td>
+									<td>Linux (Debian, Ubuntu, CentOS)</td>
+								</tr>
+								<tr>
+									<td>C++</td>
+									<td>Unix Command Line</td>
+								</tr>
+								<tr>
+									<td>Python</td>
+									<td>Git (GitHub, GitLab)</td>
+								</tr>
+								<tr>
+									<td>Java</td>
+								</tr>
+								<tr>
+									<td>CSS, HTML, SQL</td>
+								</tr>
+								</table>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
+										<h2><a href="#">Warlords of the Wastes</a></h2>
+									</header>
+										<p>A real time strategy game where you control a warband of cars
+										which travels across the wastes destroying enemy factions using the
+										rams and turrets fitted to the vehicle. The cars chaotically navigate using a
+										<a href=# >"boids"</a> algorithm to give the convoy a sense of controlled chaos.
+										Completed as a personal project.
+										</p>
+									<a href="#" class="image main"><img src="images/wotw1.jpg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="#" class="button large">Itch.io page</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://gitlab.com/uobrassmonkey/game">Watson</h2>
 									</header>
 									<a href="https://gitlab.com/uobrassmonkey/game" class="image fit"><img src="images/watson.jpg" alt="" /></a>
-									<p>A murder mystery game where you play as watson, a detective.<br />
-									You must speak to the guests, which make use of Natural Language processing </br> 
-									allowing them to understand a wide variety of qestions, to gather information </br>
-									and solve the case! Completed as part of the University of Bristol "Games Projet" </br>
+									<p>A murder mystery game where you play as watson, a detective.
+									You must speak to the guests, which make use of Natural Language processing
+									allowing them to understand a wide variety of qestions, to gather information
+									and solve the case! Completed as part of the University of Bristol "Games Project"
 									module as part of a team of 7.
 									</p>
 									<ul class="actions special">
@@ -86,39 +150,38 @@
 										<h2><a href="https://electrically-challenged.itch.io/quantum-hellbullet">Quantum Hellbullet</h2>
 									</header>
 									<a href="https://electrically-challenged.itch.io/quantum-hellbullet" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Quantum Hellbullet is an out of control twist on the classic bullet hell genre. 
-									Play as the Quantum Hellbullet, a ship with no offensive or movement capabilities 
-									which instead of weaving between projectiles you instead use the ships Quantum 
-									spacetime manipulation tools to move the projectiles around you. See how long you 
+									<p>Quantum Hellbullet is an out of control twist on the classic bullet hell genre.
+									Play as the Quantum Hellbullet, a ship with no offensive or movement capabilities
+									which instead of weaving between projectiles you instead use the ships Quantum
+									spacetime manipulation tools to move the projectiles around you. See how long you
 									can survive. <br />
 									Created by a team of 4 in 48 hours part of the 2020 GMTK "out of control" GameJam</p>
 									<ul class="actions special">
 										<li><a href="https://electrically-challenged.itch.io/quantum-hellbullet" class="button">Itch.io page</a></li>
 									</ul>
 								</article>
-								<!--
+								<article>
+									<header>
+										<h2><a href="#">"Hot Pockets": <br />
+										Urban Air Mobility Hackathon</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Github Repository</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="#">Animation</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>I've done some animation, here's my animation showreel.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Youtube Showreel</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+								<!--
 								<article>
 									<header>
 										<span class="date">April 11, 2017</span>
