Updated portfolio to include project contributions

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 							<li class="active"><a href="index.html">My portfolio</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/joseph-mills-948ba714a/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/PerJoeAdAstra" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -53,29 +53,34 @@
 									<h2>Background</h2>
 								</header>
 								<p>
-									Technical: I graduated from the <a href=https://www.bristol.ac.uk/>University of Bristol</a> with First-Class Honours in MEng Computer Science.
+									I graduated from the <a href=https://www.bristol.ac.uk/>University of Bristol</a> with First-Class Honours in <a href=http://www.bristol.ac.uk/study/undergraduate/computer-science/meng-comp-sci/> MEng Computer Science </a>.
 								</p>
 								<p>
-									Work experience: Internship, Games project, other stuff?
+									My passion for games development fully flourished in my third
+									year during the year long games project module in I and six
+									other created the game "Watson". Since then I have competed in
+									a team gamejam and since graduating have begun making my own
+									games as can be seen below.
 								</p>
 								<p>
 									When I'm not working on game related projects, I enjoy 3D
-									printing and playing music, having played trombone in a of
-									ensambles. I also play Piano, Guitar and Drums casually.
-									Additionally, I enjoy playing video games, board games and
-									tabletop games as well as being creative with 3D modelling
-									and 3D printing.
+									printing and playing music, having played trombone in a
+									variety of ensambles. I also play Piano, Guitar and Drums
+									casually. Additionally, I enjoy playing video games, board
+									games and tabletop games as well as being creative with 3D
+									modelling and 3D printing an example of can be seen
+									<a href=https://www.thingiverse.com/thing:4607211>on this thingiverse page</a>.
 								</p>
-								<a href="#" class="image main"><img src="images/wotw1.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Itch.io page</a></li>
-									<li><a href="#" class="button large">Itch.io page</a></li>
+									<li><a href="https://github.com/PerJoeAdAstra" class="button large">Github</a></li>
+									<li><a href="https://itch.io/profile/plucky" class="button large">Itch.io page</a></li>
+									<li><a href="https://www.linkedin.com/in/joseph-mills-948ba714a/" class="button large">LinkedIn</a></li>
 								</ul>
 							</article>
 
 							<article class="post featured">
 								<header class="minor">
-									<h2><a href="#">Skills</a></h2>
+									<h2>Skills</h2>
 								</header>
 								<table>
 									<tr>
@@ -97,15 +102,12 @@
 									<td>Linux (Debian, Ubuntu, CentOS)</td>
 								</tr>
 								<tr>
-									<td>C++</td>
+									<td>Python</td>
 									<td>Unix Command Line</td>
 								</tr>
 								<tr>
-									<td>Python</td>
-									<td>Git (GitHub, GitLab)</td>
-								</tr>
-								<tr>
 									<td>Java</td>
+									<td>Git (GitHub, GitLab)</td>
 								</tr>
 								<tr>
 									<td>CSS, HTML, SQL</td>
@@ -117,83 +119,110 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Warlords of the Wastes</a></h2>
+										<h2><a href="https://plucky.itch.io/warlords-of-the-wastes">Warlords of the Wastes</a></h2>
 									</header>
-										<p>A real time strategy game where you control a warband of cars
+									<a href="https://plucky.itch.io/warlords-of-the-wastes" class="image fit"><img src="images/wotw.png" alt="" /></a>
+									<p>
+										A real time strategy game where you control a warband of cars
 										which travels across the wastes destroying enemy factions using the
-										rams and turrets fitted to the vehicle. The cars chaotically navigate using a
-										<a href=# >"boids"</a> algorithm to give the convoy a sense of controlled chaos.
-										Completed as a personal project.
-										</p>
-									<a href="#" class="image main"><img src="images/wotw1.jpg" alt="" /></a>
+										rams and turrets fitted to the vehicle.
+									</p>
+									<p>
+										Created as an extension to a personal personal project involving the boids algorithm.
+										I implemented a <a href="https://en.wikipedia.org/wiki/Boids" >boid algorithm</a>
+										as a personal project (which can be found <a href="https://github.com/PerJoeAdAstra/Boids">here</a>)
+										and after seeing the implementation I though this could be used to steer a group of cars.
+										From this implementation, this game emerged.
+									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button large">Itch.io page</a></li>
+										<li><a href="https://plucky.itch.io/warlords-of-the-wastes" class="button large">Itch.io page</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2><a href="https://gitlab.com/uobrassmonkey/game">Watson</h2>
 									</header>
-									<a href="https://gitlab.com/uobrassmonkey/game" class="image fit"><img src="images/watson.jpg" alt="" /></a>
-									<p>A murder mystery game where you play as watson, a detective.
-									You must speak to the guests, which make use of Natural Language processing
-									allowing them to understand a wide variety of qestions, to gather information
-									and solve the case! Completed as part of the University of Bristol "Games Project"
-									module as part of a team of 7.
+									<a href="https://gitlab.com/uobrassmonkey/game" class="image fit"><img src="images/watson.png" alt="" /></a>
+									<p>
+										A murder mystery game where you play as watson, a detective.
+										You must speak to the guests, which make use of Natural Language processing
+										allowing them to understand a wide variety of qestions, to gather information
+										and solve the case!
+									</p>
+									<p>
+										Completed as part of the University of Bristol "Games Project"
+										module as part of a team of 7. I was primarily in charge of character and scenery modeling,
+										animation and game logic programming. In addition to this I was primarily in charge of collecting
+										playtester feedback.
 									</p>
 									<ul class="actions special">
 										<li><a href="https://gitlab.com/uobrassmonkey/game" class="button">GitLab Repository</a></li>
+										<li><a href="https://gitlab.com/uobrassmonkey/game/-/tree/refactor-code-tidying/BuiltGame" class="button">Final Game builds</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2><a href="https://electrically-challenged.itch.io/quantum-hellbullet">Quantum Hellbullet</h2>
 									</header>
-									<a href="https://electrically-challenged.itch.io/quantum-hellbullet" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Quantum Hellbullet is an out of control twist on the classic bullet hell genre.
-									Play as the Quantum Hellbullet, a ship with no offensive or movement capabilities
-									which instead of weaving between projectiles you instead use the ships Quantum
-									spacetime manipulation tools to move the projectiles around you. See how long you
-									can survive. <br />
-									Created by a team of 4 in 48 hours part of the 2020 GMTK "out of control" GameJam</p>
+									<a href="https://electrically-challenged.itch.io/quantum-hellbullet" class="image fit"><img src="images/QuantumHellbullet.png" alt="" /></a>
+									<p>
+										Quantum Hellbullet is an out of control twist on the classic bullet hell genre.
+										Play as the Quantum Hellbullet, a ship with no offensive or movement capabilities
+										which instead of weaving between projectiles you instead use the ships Quantum
+										spacetime manipulation tools to move the projectiles around you. See how long you
+										can survive.
+									</p>
+									<p>
+										Created by a team of 4 called "electrically challenged" in 48 hours
+										as part of the 2020 GMTK "out of control" GameJam.
+										During this I was project leader and additionally worked on gameplay logic and models for the game.
+									</p>
 									<ul class="actions special">
 										<li><a href="https://electrically-challenged.itch.io/quantum-hellbullet" class="button">Itch.io page</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">"Hot Pockets": <br />
-										Urban Air Mobility Hackathon</a></h2>
+										<h2><a href="https://github.com/PerJoeAdAstra/Hot-Pockets">"Hot Pockets": Urban Air Mobility Hackathon</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/PerJoeAdAstra/Hot-Pockets" class="image fit"><img src="images/HotPockets.png" alt="" /></a>
+									<p>
+										Hot-Pockets is a unity based weather simulation which enables more efficient
+										routing of autonomous air vehicles around a city. In the project the engine power
+										use of a drone which takes the shortest path and a drone which makes use of the
+										natural pheonomenas of ridge lift and thermal columns are monitored.
+									</p>
+									<p>
+										Hot pockets is a euphamism for <a href="https://en.wikipedia.org/wiki/Thermal">thermal columns</a>.
+
+										This is the phenomena of large areas of ground releasing heat throughout the day creating thermal updrafts.
+										These updrafts can be used by air vehicles to gain height efficiently. The simulation takes into account these hot objects and radiates heat
+										throughout the system. These objects give free lift to any vehicle inside them.
+									</p>
+									<p>
+										Wind is also simulated due to the phenomena known as <a href="https://en.wikipedia.org/wiki/Ridge_lift">ridge lift</a>.
+										This allows the air vehicle to take advantage of wind blowing at large vertical structures such as skyscrapers.
+									</p>
+									<p>
+										Hot-Pockets was the winner of the University of Bristol's Computer Science Society's 24 hour "Urban Air Mobility" Hack-a-thon 2020.
+									</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/PerJoeAdAstra/Hot-Pockets" class="button">Github Repository</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">Graphics: Raytracing and Rasterisation</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Raytracing.jpg" alt="" /></a><a href="#" class="image fit"><img src="images/Rasteriser.jpg" alt="" /></a>
+									<p>
+										WIP
+									</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Github Repository</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<h2><a href="#">Animation</h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>I've done some animation, here's my animation showreel.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Youtube Showreel</a></li>
-									</ul>
-								</article>
 								<!--
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
 								<article>
 									<header>
 										<span class="date">April 7, 2017</span>
@@ -206,7 +235,17 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								-->
+							-->
+								<article>
+									<header>
+										<h2><a href="#">Animation</h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<p>I've done some animation, here's my animation showreel.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Youtube Showreel</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer -->
@@ -220,22 +259,25 @@
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">Joseph.Mills22@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/joseph-mills-948ba714a/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/PerJoeAdAstra" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
 					</footer>
 
-				<!-- Copyright -->
+				<!-- Copyright
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
+				-->
+				<div id="copyright">
+				</div>
 
 			</div>
 
