Updated capitalisation of images

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 									<header>
 										<h2><a href="https://plucky.itch.io/warlords-of-the-wastes">Warlords of the Wastes</a></h2>
 									</header>
-									<a href="https://plucky.itch.io/warlords-of-the-wastes" class="image fit"><img src="images/wotw.png" alt="" /></a>
+									<a href="https://plucky.itch.io/warlords-of-the-wastes" class="image fit"><img src="images/WOTW.png" alt="" /></a>
 									<p>
 										A real time strategy game where you control a warband of cars
 										which travels across the wastes destroying enemy factions using the
@@ -142,7 +142,7 @@
 									<header>
 										<h2><a href="https://gitlab.com/uobrassmonkey/game">Watson</h2>
 									</header>
-									<a href="https://gitlab.com/uobrassmonkey/game" class="image fit"><img src="images/watson.png" alt="" /></a>
+									<a href="https://gitlab.com/uobrassmonkey/game" class="image fit"><img src="images/Watson.png" alt="" /></a>
 									<p>
 										A murder mystery game where you play as watson, a detective.
 										You must speak to the guests, which make use of Natural Language processing
