--- a/index.html
+++ b/index.html
@@ -214,39 +214,47 @@
 									<header>
 										<h2><a href="#">Graphics: Raytracing and Rasterisation</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Raytracing.jpg" alt="" /></a><a href="#" class="image fit"><img src="images/Rasteriser.jpg" alt="" /></a>
+
+									<div class="row gtr-50 gtr-uniform">
+										<div class="col-6">
+											<a href="#" class="image fit">
+												<img src="images/raytracing.bmp" alt=""></img>
+											</a>
+										</div>
+										<div class="col-6">
+											<a href="#" class="image fit">
+												<img src="images/depthBuffer.bmp" alt=""></img>
+											</a>
+										</div>
+									</div>
 									<p>
-										WIP
+										I have created both a raycaster and rasteriser and as such have an understanding of the rendering process.
+									</p>
+									<p>
+										The raycaster utilises photon mapping to simulate indirect light bouncing throughout the scene as can be seen in the left image.
+										The image on the left shows an image of the rasterisers depth buffer, with brighter objects being closer.
+									</p>
+
+									<ul class="actions special">
+										<li><a href="https://gitlab.com/hs16597/graphics-coursework" class="button">Gitlab Repository</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://www.youtube.com/channel/UCzF8soazkoZIZgIssEN3vqQ">Animation</h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=5LSQkCvs8j0" class="image fit"><img src="Images/animation.png" alt="" /></a>
+									<p>
+										I have created animations making use of Autodesk Maya.
+										These short videos can be found on the youtube channel.
 									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Github Repository</a></li>
-									</ul>
-								</article>
-								<!--
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-							-->
-								<article>
-									<header>
-										<h2><a href="#">Animation</h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>I've done some animation, here's my animation showreel.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Youtube Showreel</a></li>
+										<li><a href="https://www.youtube.com/channel/UCzF8soazkoZIZgIssEN3vqQ" class="button">Youtube Showreel</a></li>
 									</ul>
 								</article>
 							</section>
+
+							
 
 						<!-- Footer -->
 							<footer>
