fixed missing image

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 									<header>
 										<h2><a href="https://www.youtube.com/channel/UCzF8soazkoZIZgIssEN3vqQ">Animation</h2>
 									</header>
-									<a href="https://www.youtube.com/watch?v=5LSQkCvs8j0" class="image fit"><img src="Images/animation.png" alt="" /></a>
+									<a href="https://www.youtube.com/watch?v=5LSQkCvs8j0" class="image fit"><img src="images/animation.png" alt="" /></a>
 									<p>
 										I have created animations making use of Autodesk Maya.
 										These short videos can be found on the youtube channel.
