--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Hi, my name is Joseph Mills</h1>
-						<p>I'm a Computer Science Graduate (graduated 2020) and I have a passion for games development and animation.</p>
+						<h1>Hi, my name is Joe Mills</h1>
+						<p>
+							<span class="image left"><img src="images/JosephMills.jpg"></img></span>
+							I'm a Computer Science Graduate (graduated 2020) and I have a passion for games development and animation.</p>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="#main" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
-				<!-- Header
+				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Joseph Mills</a>
+						<a href="index.html" class="logo">Joe Mills</a>
 					</header>
-				-->
 
 				<!-- Nav -->
 					<nav id="nav">
@@ -254,7 +255,22 @@
 								</article>
 							</section>
 
-							
+							<section>
+								<header>
+									<h1>
+										Other Projects
+									</h1>
+									<ul>
+										<li><a href="https://github.com/PerJoeAdAstra/IPCV">Image Processing and Computer Vision</a> - Edge detection, hough transform, Viola-Jones detection</li>
+										<li><a href="https://github.com/PerJoeAdAstra/MachineLearning">Machine Learning</a> - Markov Chain Monte Carlo methods</li>
+										<li><a href="https://github.com/PerJoeAdAstra/ParallelComputing">Parallel processing "game of life"</a> - parallel proecssing, XC</li>
+										<li><a href="https://github.com/PerJoeAdAstra/Kernel">Kernel building, Parallel processing</a> - Kernels, parallel program execution, Assembly code, pipes</li>
+										<li><a href="https://github.com/PerJoeAdAstra/Robotics_Systems">Robotics</a> - State based behaviour, PID</li>
+										<!--<li>SPE - Project management, </li>-->
+										<!--<li>Symbols Patterns and Signals - K-means clustering, </li>-->
+									</ul>
+								</header>
+							</section>
 
 						<!-- Footer -->
 							<footer>
