Updated to add itch fa-icon and soundcloud

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/joseph-mills-948ba714a/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/PerJoeAdAstra" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://itch.io/profile/plucky" class="icon brands fa-itch-io"><span class="label">Itch</span></a></li>
+							<li><a href="https://soundcloud.com/joseph-mills-538028114" class="icon brands fa-soundcloud"><span class="label">soundcloud</span></a></li>
 						</ul>
 					</nav>
 
@@ -64,12 +66,14 @@
 									games as can be seen below.
 								</p>
 								<p>
-									When I'm not working on game related projects, I enjoy 3D
-									printing and playing music, having played trombone in a
+									When I'm not working on game related projects, I enjoy playing
+									and making music, having played trombone in a
 									variety of ensambles. I also play Piano, Guitar and Drums
-									casually. Additionally, I enjoy playing video games, board
+									casually and have made some songs for my projects which can be
+									found on <a href="https://soundcloud.com/joseph-mills-538028114">my soundcloud</a>.
+									Additionally, I enjoy playing video games, board
 									games and tabletop games as well as being creative with 3D
-									modelling and 3D printing an example of can be seen
+									modelling and 3D printing, an example of can be seen
 									<a href=https://www.thingiverse.com/thing:4607211>on this thingiverse page</a>.
 								</p>
 								<ul class="actions special">
@@ -290,6 +294,8 @@
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/joseph-mills-948ba714a/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/PerJoeAdAstra" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://itch.io/profile/plucky" class="icon brands fa-itch-io"><span class="label">Itch</span></a></li>
+									<li><a href="https://soundcloud.com/joseph-mills-538028114" class="icon brands fa-soundcloud"><span class="label">soundcloud</span></a></li>
 								</ul>
 							</section>
 						</section>
