--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								</p>
 								<p>
 									My passion for games development fully flourished in my third
-									year during the year long games project module in I and six
+									year during the year long games project module in which I and six
 									other created the game "Watson". Since then I have competed in
 									a team gamejam and since graduating have begun making my own
 									games as can be seen below.
@@ -71,9 +71,9 @@
 									variety of ensambles. I also play Piano, Guitar and Drums
 									casually and have made some songs for my projects which can be
 									found on <a href="https://soundcloud.com/joseph-mills-538028114">my soundcloud</a>.
-									Additionally, I enjoy playing video games, board
-									games and tabletop games as well as being creative with 3D
-									modelling and 3D printing, an example of can be seen
+									Additionally, I enjoy playing video, board
+								  and tabletop games as well as being creative with 3D
+									modelling and 3D printing, an example of which can be seen
 									<a href=https://www.thingiverse.com/thing:4607211>on this thingiverse page</a>.
 								</p>
 								<ul class="actions special">
@@ -133,10 +133,10 @@
 										rams and turrets fitted to the vehicle.
 									</p>
 									<p>
-										Created as an extension to a personal personal project involving the boids algorithm.
+										Created as an extension to a personal project involving the boids algorithm.
 										I implemented a <a href="https://en.wikipedia.org/wiki/Boids" >boid algorithm</a>
 										as a personal project (which can be found <a href="https://github.com/PerJoeAdAstra/Boids">here</a>)
-										and after seeing the implementation I though this could be used to steer a group of cars.
+										and after seeing the implementation I thought this could be used to steer a group of cars.
 										From this implementation, this game emerged.
 									</p>
 									<ul class="actions special">
@@ -149,14 +149,14 @@
 									</header>
 									<a href="https://gitlab.com/uobrassmonkey/game" class="image fit"><img src="images/Watson.png" alt="" /></a>
 									<p>
-										A murder mystery game where you play as watson, a detective.
+										A murder mystery game where you play as Watson, a detective.
 										You must speak to the guests, which make use of Natural Language processing
 										allowing them to understand a wide variety of qestions, to gather information
 										and solve the case!
 									</p>
 									<p>
 										Completed as part of the University of Bristol "Games Project"
-										module as part of a team of 7. I was primarily in charge of character and scenery modeling,
+										module as a member of a team of 7. I completed of character and scenery modeling,
 										animation and game logic programming. In addition to this I was primarily in charge of collecting
 										playtester feedback.
 									</p>
@@ -173,12 +173,12 @@
 									<p>
 										Quantum Hellbullet is an out of control twist on the classic bullet hell genre.
 										Play as the Quantum Hellbullet, a ship with no offensive or movement capabilities
-										which instead of weaving between projectiles you instead use the ships Quantum
+										which instead of weaving between projectiles you use the ships Quantum
 										spacetime manipulation tools to move the projectiles around you. See how long you
 										can survive.
 									</p>
 									<p>
-										Created by a team of 4 called "electrically challenged" in 48 hours
+										Created by a team of 4 called "Electrically Challenged" in 48 hours
 										as part of the 2020 GMTK "out of control" GameJam.
 										During this I was project leader and additionally worked on gameplay logic and models for the game.
 									</p>
