--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 									</p>
 									<p>
 										Completed as part of the University of Bristol "Games Project"
-										module as a member of a team of 7. I completed of character and scenery modeling,
+										module as a member of a team of 7. I completed character and scenery modeling,
 										animation and game logic programming. In addition to this I was primarily in charge of collecting
 										playtester feedback.
 									</p>
