Updated some typos, added what I did into hot pockets

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 									<p>
 										Hot-Pockets is a unity based weather simulation which enables more efficient
 										routing of autonomous air vehicles around a city. In the project the engine power
-										use of a drone which takes the shortest path and a drone which makes use of the
+										usage of a drone which takes the shortest path and a drone which makes use of the
 										natural pheonomenas of ridge lift and thermal columns are monitored.
 									</p>
 									<p>
@@ -207,6 +207,10 @@
 									<p>
 										Wind is also simulated due to the phenomena known as <a href="https://en.wikipedia.org/wiki/Ridge_lift">ridge lift</a>.
 										This allows the air vehicle to take advantage of wind blowing at large vertical structures such as skyscrapers.
+									</p>
+									<p>
+										I was part of the team of 4 which created "Hot Pockets". In this I worked on both the pathing algorithms of the project,
+										scene logic and all of the modelling and texturing.
 									</p>
 									<p>
 										Hot-Pockets was the winner of the University of Bristol's Computer Science Society's 24 hour "Urban Air Mobility" Hack-a-thon 2020.
@@ -237,7 +241,7 @@
 									</p>
 									<p>
 										The raycaster utilises photon mapping to simulate indirect light bouncing throughout the scene as can be seen in the left image.
-										The image on the left shows an image of the rasterisers depth buffer, with brighter objects being closer.
+										The image on the right shows an image of the rasterisers depth buffer, with brighter objects being closer.
 									</p>
 
 									<ul class="actions special">
