--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">Joseph.Mills22@gmail.com</a></p>
+								<p><a href="#">Jm16577@alumni.bristol.ac.uk</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
