--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<li><a href="https://www.linkedin.com/in/joseph-mills-948ba714a/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/PerJoeAdAstra" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://itch.io/profile/plucky" class="icon brands fa-itch-io"><span class="label">Itch</span></a></li>
-							<li><a href="https://soundcloud.com/joseph-mills-538028114" class="icon brands fa-soundcloud"><span class="label">soundcloud</span></a></li>
+							<li><a href="https://soundcloud.com/plucky_tunes" class="icon brands fa-soundcloud"><span class="label">soundcloud</span></a></li>
 						</ul>
 					</nav>
 
@@ -70,7 +70,7 @@
 									and making music, having played trombone in a
 									variety of ensambles. I also play Piano, Guitar and Drums
 									casually and have made some songs for my projects which can be
-									found on <a href="https://soundcloud.com/joseph-mills-538028114">my soundcloud</a>.
+									found on <a href="https://soundcloud.com/plucky_tunes">my soundcloud</a>.
 									Additionally, I enjoy playing video, board
 								  and tabletop games as well as being creative with 3D
 									modelling and 3D printing, an example of which can be seen
@@ -299,7 +299,7 @@
 									<li><a href="https://www.linkedin.com/in/joseph-mills-948ba714a/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/PerJoeAdAstra" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://itch.io/profile/plucky" class="icon brands fa-itch-io"><span class="label">Itch</span></a></li>
-									<li><a href="https://soundcloud.com/joseph-mills-538028114" class="icon brands fa-soundcloud"><span class="label">soundcloud</span></a></li>
+									<li><a href="https://soundcloud.com/plucky_tunes" class="icon brands fa-soundcloud"><span class="label">soundcloud</span></a></li>
 								</ul>
 							</section>
 						</section>
